--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-03  Craig Burley  <craig@jcb-sc.com>
+
+	* bugs.texi: Update with latest bug-fixes from 1.2.
+	Remove fixed bugs.
+
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
 	* news.texi: List fixes to Date_and_Time and LStat, plus
