--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,11 @@
+1999-03-05  Craig Burley  <craig@jcb-sc.com>
+
+	* libU77/Version.c: Bump version.
+
+	* libU77/vxtidate_.c (G77_vxtidate_0): Truncate
+	year to last two digits (i.e. modulo 100), as per
+	documentation and Y2K (non-)compliance.
+
 1999-02-26  Craig Burley  <craig@jcb-sc.com>
 
 	* libU77/Version.c: Bump version.
