[PATCH]Fix PR66556. Don't drop side-effect in simplify_const_relational_operation function.
gcc/

	Backport from mainline.
	2015-07-13  Renlin Li  <renlin.li@arm.com>

	PR rtl/66556
	* simplify-rtx.c (simplify_const_relational_operation): Add
	side_effects_p checks.

gcc/testsuite/

	Backport from mainline.
	2015-07-13  Renlin Li  <renlin.li@arm.com>

	PR rtl/66556
	* gcc.c-torture/execute/pr66556.c: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@225835 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2015-07-15  Renlin Li  <renlin.li@arm.com>
+
+	Backport from mainline.
+	2015-07-13  Renlin Li  <renlin.li@arm.com>
+
+	PR rtl/66556
+	* gcc.c-torture/execute/pr66556.c: New.
+
 2015-07-15  Thomas Schwinge  <thomas@codesourcery.com>
 
 	Backport trunk r224028:
