Fix PR ipa/66896.
	* g++.dg/ipa/pr66896.c: New test.
	PR ipa/66896.
	* ipa-prop.c (update_jump_functions_after_inlining): Create properly
	dst_ctx if it does not exist.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@225888 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2015-07-16  Martin Liska  <mliska@suse.cz>
+
+	PR ipa/66896.
+	* ipa-prop.c (update_jump_functions_after_inlining): Create properly
+	dst_ctx if it does not exist.
+
 2015-07-16  Richard Biener  <rguenther@suse.de>
 
 	* BASE-VER: Set to 5.2.1.
