Backport from mainline: 	2015-07-10  Uros Bizjak  <ubizjak@gmail.com>
	PR target/66703
	* gcc.target/i386/readeflags-1.c (readeflags_test): Declare with
	__attribute__((noinline, noclone)).  Change "x" to "volatile char"
	type to prevent possible flag-clobbering zero-extensions.
	* gcc.target/i386/pr66703.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@225941 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,17 @@
 2015-06-17  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
+	2015-07-10  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/66703
+	* gcc.target/i386/readeflags-1.c (readeflags_test): Declare with
+	__attribute__((noinline, noclone)).  Change "x" to "volatile char"
+	type to prevent possible flag-clobbering zero-extensions.
+	* gcc.target/i386/pr66703.c: New test.
+
+2015-06-17  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline:
 	2015-07-09  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/66814
