2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
	Backport from mainline:
	2015-05-20  Alex Velenko  <Alex.Velenko@arm.com>

	* gcc.target/arm/thumb1-far-jump-2.c (r4): Added int in definition.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226034 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,6 +1,13 @@
 2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
 
 	Backport from mainline:
+	2015-05-20  Alex Velenko  <Alex.Velenko@arm.com>
+
+	* gcc.target/arm/thumb1-far-jump-2.c (r4): Added int in definition.
+
+2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
+
+	Backport from mainline:
 	2015-06-01  Alex Velenko  <Alex.Velenko@arm.com>
 
 	* gcc.target/arm/thumb-ltu.c (foo): Predefined.
