2015-07-21  Richard Biener  <rguenther@suse.de>
	PR tree-optimization/66948
	* genmatch.c (capture_info::walk_match): Also recurse to
	captures.  Properly compute expr state from captures of
	captures.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226042 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2015-07-21  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/66948
+	* genmatch.c (capture_info::walk_match): Also recurse to
+	captures.  Properly compute expr state from captures of
+	captures.
+
 2015-07-18  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/66922
