2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
	Backport from mainline:
	2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>

	* gcc.target/arm/thumb-bitfld1.c (foo): Add explicit return type.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226044 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
+
+	Backport from mainline:
+	2015-07-21  Alex Velenko  <Alex.Velenko@arm.com>
+
+	* gcc.target/arm/thumb-bitfld1.c (foo): Add explicit return type.
+
 2015-07-21  Andre Vehreschild  <vehre@gcc.gnu.org>
 
 	PR fortran/66035
