PR target/65249 * config/sh/sh.md (movdi): Split simple reg move to two movsi when   the destination is R0 so as to lower R0-register pressure.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-4_9-branch@226201 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-25  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	Backport from mainline
+	2015-07-16  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	PR target/65249
+	* config/sh/sh.md (movdi): Split simple reg move to two movsi
+	when the destination is R0.
+
 2015-07-24  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
 	Backported from mainline r226159.
