PR target/67060 	* config/pa/pa.md (call_reg_64bit): Remove reg:DI 1 clobber. 	Adjust splits to match new pattern.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226523 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2015-08-03  John David Anglin  <danglin@gcc.gnu.org>
+
+	PR target/67060
+	* config/pa/pa.md (call_reg_64bit): Remove reg:DI 1 clobber.
+	Adjust splits to match new pattern.
+
 2015-08-03  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
 	Backport form mainline r226496.
