2015-08-04  Szabolcs Nagy  <szabolcs.nagy@arm.com>
	* gcc.target/aarch64/fnmul-1.c: Fix whitespace.
	* gcc.target/aarch64/fnmul-2.c: Likewise.
	* gcc.target/aarch64/fnmul-3.c: Likewise.
	* gcc.target/aarch64/fnmul-4.c: Likewise.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-5-branch@226590 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,12 @@
 2015-08-04  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
+	* gcc.target/aarch64/fnmul-1.c: Fix whitespace.
+	* gcc.target/aarch64/fnmul-2.c: Likewise.
+	* gcc.target/aarch64/fnmul-3.c: Likewise.
+	* gcc.target/aarch64/fnmul-4.c: Likewise.
+
+2015-08-04  Szabolcs Nagy  <szabolcs.nagy@arm.com>
+
 	Backport from mainline r225450:
 	2015-07-06  Szabolcs Nagy  <szabolcs.nagy@arm.com>
 
